--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,32 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/NoNamePlat
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.17.0.jar=lib\\commons-io-2.17.0.jar
+file.reference.jaudiotagger-2.2.7.jar=lib\\jaudiotagger-2.2.7.jar
+file.reference.java-stream-player-10.0.2.jar=lib\\java-stream-player-10.0.2.jar
+file.reference.java-vorbis-support-1.2.1.jar=lib\\java-vorbis-support-1.2.1.jar
+file.reference.jflac-codec-1.5.2.jar=lib\\jflac-codec-1.5.2.jar
+file.reference.jinput-2.0.10.jar=lib\\jinput-2.0.10.jar
+file.reference.jlayer-1.0.1.4.jar=lib\\jlayer-1.0.1.4.jar
+file.reference.jorbis-0.0.17.4.jar=lib\\jorbis-0.0.17.4.jar
+file.reference.mp3spi-1.9.5.4.jar=lib\\mp3spi-1.9.5.4.jar
+file.reference.tritonus-all-0.3.7.2.jar=lib\\tritonus-all-0.3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.JSGE-Latest.classpath}
+    ${file.reference.commons-io-2.17.0.jar}:\
+    ${file.reference.jaudiotagger-2.2.7.jar}:\
+    ${file.reference.java-stream-player-10.0.2.jar}:\
+    ${file.reference.java-vorbis-support-1.2.1.jar}:\
+    ${file.reference.jflac-codec-1.5.2.jar}:\
+    ${file.reference.jinput-2.0.10.jar}:\
+    ${file.reference.jlayer-1.0.1.4.jar}:\
+    ${file.reference.jorbis-0.0.17.4.jar}:\
+    ${file.reference.mp3spi-1.9.5.4.jar}:\
+    ${file.reference.tritonus-all-0.3.7.2.jar}:\
+    ${reference.JSGE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -99,7 +119,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.JSGE=../../JSGE
 project.licensePath=nbproject/licenseheader.txt
+reference.JSGE.jar=${project.JSGE}/dist/JSGE.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
