--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,17 +51,17 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${reference.JSGE.jar}:\
     ${file.reference.commons-io-2.17.0.jar}:\
     ${file.reference.jaudiotagger-2.2.7.jar}:\
     ${file.reference.java-stream-player-10.0.2.jar}:\
     ${file.reference.java-vorbis-support-1.2.1.jar}:\
     ${file.reference.jflac-codec-1.5.2.jar}:\
-    ${file.reference.jinput-2.0.10.jar}:\
     ${file.reference.jlayer-1.0.1.4.jar}:\
     ${file.reference.jorbis-0.0.17.4.jar}:\
     ${file.reference.mp3spi-1.9.5.4.jar}:\
     ${file.reference.tritonus-all-0.3.7.2.jar}:\
-    ${reference.JSGE.jar}
+    ${file.reference.jinput-2.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
